--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="sidebar">
-    <img src="images/me.jpg" alt="me" width="75%" height="75%"
+    <img src="images/me2.png" alt="me" width="75%" height="75%"
          style="border-radius: 50%">
     <br><br>
     <p style="font-size: 150%; line-height: 1; margin-bottom: 10px;"><b>Gelei Xu</b></p>
