--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <b>Achieving Fairness in Dermatological Disease Diagnosis through Automatic Weight Adjusting Federated
                     Learning and Personalization</b>
             </a><br>
-            <b>Gelei Xu</b>, Yawen Wu, Jingtong Hu, Yiyu Shi<br>
+            <b>Gelei Xu</b>, Yawen Wu, Jingtong Hu, and Yiyu Shi<br>
             In Submission<br>
             [<a href="files/papers/xu_arxiv23.pdf">Paper PDF</a>]
         </div>
