--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Gelei Xu</title>
-    <link rel="icon" href="images/nd.jpg">
+    <link rel="icon" href="images/cat_w.png">
     <link rel="stylesheet" href="css/layout.css">
 </head>
 
