--- a/index.html
+++ b/index.html
@@ -4,26 +4,21 @@
 <head>
     <meta charset="utf-8">
     <title>Gelei Xu</title>
-    <link rel="icon" href="images/cat_w.png">
+    <link rel="icon" href="images/cat.png">
     <link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body>
 <div class="sidebar">
-    <img src="images/me2.png" alt="me" width="75%" height="75%"
-         style="border-radius: 50%">
+    <img id="img-me" src="images/me2.png" alt="me">
     <br><br>
-    <p style="font-size: 150%; line-height: 1; margin-bottom: 10px;"><b>Gelei Xu</b></p>
-    Pronouns: she/her/hers
-    <br><br>
-    Incoming Ph.D. Student
-    <br><br>
-    <a href="https://cse.nd.edu/" style="text-decoration: underline">Department of Computer Science and Engineering</a>
-    <br><br>
-    <a href="https://nd.edu/" style="text-decoration: underline">University of Notre Dame</a>
-    <br><br>
-
-    <a href="files/cv_xu.pdf">
+    <p id="p-name"><b>Gelei Xu</b></p>
+    <p>Pronouns: she/her/hers</p>
+    <p>Incoming Ph.D. Student</p>
+    <p><a href="https://cse.nd.edu/" style="text-decoration: underline">Department of Computer Science and
+        Engineering</a></p>
+    <p><a href="https://nd.edu/" style="text-decoration: underline">University of Notre Dame</a></p>
+    <p><a href="files/cv_xu.pdf">
         <svg viewBox="0 0 448 512">
             <path d="M48 32C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48H48zm98.88 133.234c19.636 0 37.082 6.789 49.929 16.971c11.88 9.452 17.444 18.907 22.298 27.393l-33.923 16.949c-2.427-5.565-5.347-11.387-12.846-17.682c-8.248-6.552-16.478-8.484-23.524-8.484c-27.626 0-42.17 25.693-42.17 54.287c0 37.573 19.161 56.22 42.17 56.22c22.3 0 31.278-15.51 37.08-25.435L219.6 302.66c-6.315 9.926-12.374 19.635-25.95 29.069c-7.262 5.09-23.977 15.037-47.736 15.037C100.586 346.766 64 313.81 64 255.87c0-50.636 34.415-90.637 82.88-90.637zm75.483 5.328h45.565L303.31 292.24l35.125-121.678H384l-59.379 171.112H281.01l-58.647-171.111z"></path>
         </svg>
@@ -61,7 +56,7 @@
 </div>
 
 <div class="main">
-    <p style="font-size: 180%; margin-bottom: 0;"><b>About me</b></p>
+    <p style="font-size: 24pt; margin-bottom: 0;"><b>About me</b></p>
     <p>
         I am an incoming Ph.D. student in the
         <a href="https://cse.nd.edu/">Department of Computer Science and Engineering</a> at the
@@ -86,7 +81,7 @@
             aware of any suitable openings, please feel free to contact me. Thank you!</p>
     </div>
 
-    <p style="font-size: 180%; margin-bottom: 0;"><b>News</b></p>
+    <p style="font-size: 24pt; margin-bottom: 0;"><b>News</b></p>
     <ul>
         <li>
             <p><b>2023-04-15</b><br>
@@ -118,7 +113,7 @@
         </li>
     </ul>
 
-    <p style="font-size: 180%; margin-bottom: 0;"><b>Publications</b></p>
+    <p style="font-size: 24pt; margin-bottom: 0;"><b>Publications</b></p>
     <br>
     <div class="publication_row">
         <div class="publication_column left">
