--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
     <p style="font-size: 24pt; margin-bottom: 0;"><b>News</b></p>
     <ul>
         <li>
+            <p><b>2023-08-20</b><br>
+                🏫 Officially joined University of Notre Dame as a CSE graduate student!
+        </li>
+        <li>
+            <p><b>2023-06-30</b><br>
+                🏆 I've successfully graduated from SUSTech and have
+                had the honor of being selected as the outstanding graduate.
+        </li>
+        <li>
             <p><b>2023-04-15</b><br>
                 🏫 Excited to share that I will be joining CSE@ND as a Ph.D. student starting in the fall of
                 2023. I will be working under the guidance of
