--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br><br>
     <p id="p-name"><b>Gelei Xu</b></p>
     <p>Pronouns: she/her/hers</p>
-    <p>Incoming Ph.D. Student</p>
+    <p>Ph.D. Student</p>
     <p><a href="https://cse.nd.edu/" style="text-decoration: underline">Department of Computer Science and
         Engineering</a></p>
     <p><a href="https://nd.edu/" style="text-decoration: underline">University of Notre Dame</a></p>
@@ -58,10 +58,10 @@
 <div class="main">
     <p style="font-size: 24pt; margin-bottom: 0;"><b>About me</b></p>
     <p>
-        I am an incoming Ph.D. student in the
+        I am a first year Ph.D. student in the
         <a href="https://cse.nd.edu/">Department of Computer Science and Engineering</a> at the
         <a href="https://www.nd.edu/">University of Notre Dame</a>, advised by
-        <a href="https://www3.nd.edu/~scl/index.html">Prof. Yiyu Shi</a>. Currently, I am also a senior student in the
+        <a href="https://www3.nd.edu/~scl/index.html">Prof. Yiyu Shi</a>. I received my B.Eng. degree in the
         <a href="https://cse.sustech.edu.cn/en/">same department</a>
         at <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology (SUSTech)</a>,
         where I am working with
